# mnist-with-voting-classifier

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml
.devcontainer/: devcontainer.json
